kubernetes/kustomize/base/flowforge/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: api-db
spec:
  selector:
    app: api-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: db-port
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: rabbit
      name: rabbit
    - protocol: TCP
      port: 15672
      targetPort: rabbit-secure
      name: rabbit-secure
