kubernetes/kustomize/base/flowforge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flowforge-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: flowforge-k8s.spyrosmoux.com
      http:
        paths:
          - path: /app/cicd/api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  name: http
          - path: /app/cicd/logs
            pathType: Prefix
            backend:
              service:
                name: logcollector
                port:
                  name: http
